--- a/tools/testing/selftests/rseq/.gitignore
+++ b/tools/testing/selftests/rseq/.gitignore
@@ -1,12 +1,16 @@
 # SPDX-License-Identifier: GPL-2.0-only
 basic_numa_test
 basic_percpu_ops_test
+basic_percpu_ops_vm_numa_vcpu_id_test
 basic_percpu_ops_vm_vcpu_id_test
 basic_test
 basic_rseq_op_test
 param_test
 param_test_benchmark
 param_test_compare_twice
+param_test_vm_numa_vcpu_id
+param_test_vm_numa_vcpu_id_benchmark
+param_test_vm_numa_vcpu_id_compare_twice
 param_test_vm_vcpu_id
 param_test_vm_vcpu_id_benchmark
 param_test_vm_vcpu_id_compare_twice
